# thesischain

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  client.py  docker-compose.yml
.claude/: settings.local.json
blockchain/: Cargo.toml
blockchain/src/: app.rs  main.rs
common/: Cargo.toml
config/: .gitignore  otel-collector.yaml  tempo.yaml
config/nginx/: nginx.conf
contract/: .dockerignore  Dockerfile  deploy.sh
contract/script/: KeyDirectory.sol
contract/src/: KeyDirectory.sol
contract/test/: KeyDirectory.sol
core/: Cargo.toml
core/proto/: dchat.proto
core/src/: build.rs  identity.rs  lib.rs
core/src/proto_generated/: _.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs  main.rs
crates/defs/: Cargo.toml
crates/end2/: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  postgres.ps1
crates/end2-api-client/: Cargo.toml  README.md
crates/end2-api-client/src/: device.rs  main.rs
crates/end2-cometbft/: Cargo.toml  Dockerfile
crates/end2-cometbft/src/: main.rs  store.rs
crates/end2-wasm-client/: Cargo.toml  Dockerfile  README.md  main.js  package.json  webpack.config.js
crates/end2-wasm-client/frontend/: .gitignore  deno.json  index.html  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
crates/end2-wasm-client/frontend/src/: App.vue  api.ts  auth.js  channel.ts  common.js  db.ts  device.ts  env.d.ts  main.js  main.ts  router.js  router.ts  state.ts  store.js  style.css  user.ts  ws.ts
crates/end2-wasm-client/frontend/src/components/: ChatHistory.vue  ChatInput.vue  ErrorMessage.vue  channel.vue  dashboard.vue  login.vue  logout.vue  register.vue
crates/end2-wasm-client/frontend/src/routes/: chat.vue  chats.vue  home.vue  login.vue  logout.vue  register.vue  settings.vue
crates/end2-wasm-client/frontend/src/services/: crypto.ts
crates/end2-wasm-client/frontend/src/stores/: channel.ts  device.ts  message.ts  socket.ts  user.ts
crates/end2-wasm-client/frontend/src/types/: channel.ts  device.ts  message.ts  user.ts
crates/end2-wasm-client/src/: device.rs  lib.rs  message.rs  types.rs
crates/end2/migrations/2026-01-01-181125-0000_user/: up.sql
crates/end2/migrations/2026-01-01-181125-0000_users/: up.sql
crates/end2/migrations/2026-01-01-181126-0000_device/: up.sql
crates/end2/migrations/2026-01-01-181128-0000_channel/: down.sql  up.sql
crates/end2/migrations/2026-01-01-181128-0000_rooms/: up.sql
crates/end2/migrations/2026-01-01-181143-0000_session/: up.sql
crates/end2/migrations/2026-01-01-181143-0000_sessions/: up.sql
crates/end2/migrations/2026-01-01-181143-0000_web_session/: down.sql  up.sql
crates/end2/migrations/2026-01-01-181202-0000_message_requests/: down.sql  up.sql
crates/end2/migrations/2026-01-01-182513-0000_message/: up.sql
crates/end2/migrations/2026-01-01-182513-0000_messages/: down.sql  up.sql
crates/end2/migrations/2026-01-01-205844-0000_room_participants/: down.sql  up.sql
crates/end2/migrations/2026-01-02-192359-0000_one_time_key/: down.sql  up.sql
crates/end2/migrations/2026-01-02-192359-0000_otks/: down.sql  up.sql
crates/end2/migrations/2026-01-02-210558-0000_challenge/: down.sql  up.sql
crates/end2/migrations/2026-01-05-214325-0000_discord_info/: down.sql  up.sql
crates/end2/migrations/2026-01-06-032710-0000_discord_token/: down.sql  up.sql
crates/end2/migrations/2026-01-09-021811-0000_message_payload/: down.sql  up.sql
crates/end2/migrations/2026-01-11-172304-0000_channel_participant/: down.sql  up.sql
crates/end2/migrations/2026-02-18-065144-0000_miner/: down.sql  up.sql
crates/end2/src/: app.rs  dm.rs  endpoints.rs  errors.rs  lib.rs  main.rs  models.rs  oauth.rs  schema.rs  session.rs  state.rs  types.rs  user.rs  util.rs  web_endpoints.rs  ws.rs
crates/end2/src/endpoints/: auth.rs  channel.rs  key.rs  mod.rs  user.rs
crates/end2/src/extractors/: mod.rs  user.rs  web_session.rs
crates/end2/src/middleware/: mod.rs  session.rs  telemetry.rs
crates/end2/src/models/: channel.rs  db.rs  device.rs  discord.rs  message.rs  message_payload.rs  mod.rs  otk.rs  user.rs  web_session.rs
crates/end2/src/routes/: miners.rs  mod.rs  version.rs  ws.rs
crates/end2/src/routes/auth/: attest.rs  discord.rs  google.rs  login.rs  logout.rs  mod.rs  register.rs
crates/end2/src/routes/channel/: create.rs  get.rs  history.rs  mod.rs
crates/end2/src/routes/device/: create.rs  device.rs  get.rs  mod.rs  otk.rs
crates/end2/src/routes/me/: mod.rs  user.rs
crates/end2/src/routes/user/: get.rs  mod.rs  valid.rs
crates/end2/src/services/: auth.rs  chain.rs  cometbft.rs  device.rs  ethereum.rs  forging.rs  keys.rs  malicious.rs  mod.rs  otk.rs  relay.rs  web_session.rs
crates/end2/src/services/traits/: auth.rs  device.rs  mod.rs  otk.rs  relay.rs  web_session.rs
crates/end2/src/state/: channel.rs  device.rs  message.rs  mod.rs  session.rs  user.rs
crates/end2/src/ws/: mod.rs  types.rs
crates/end2/templates/: base.html  dm.html  index.html  login.html  messages.html  register.html
crates/end2/tests/: integration.rs
crates/end2/tests/common/: device.rs  mod.rs
crates/miner/: Cargo.toml
crates/miner/src/: chain.rs  crypto.rs  error.rs  genesis.rs  http.rs  lib.rs  main.rs  network.rs  state.rs  tests.rs  types.rs
crates/relay/: Cargo.toml
docs/: centralized.mmd  permissioned.mmd  permissionless.mmd  service.mmd
k6/: README.md  cometbft_test.js  cometbft_test_no_new_devices.js  create_account.js  forged_device_detection.js  gen_keys.py  get_device.js  get_device_history.js  malicious_distribution_detection.js  permissionless.ps1  set_device.js  update_device.js  user_devices.json
k6/results/: centralized.md  convert.sh  permissionless.md  permissoned.md  summary.md
load_test/: requirements.txt
node/: Cargo.toml
node/src/: main.rs
src/: app.rs  block.rs  chain.rs  lib.rs  main.rs  peer.rs  routes.rs  startup.rs
src/api/: app.rs  errors.rs  (+2 more)
swarm-only/: Cargo.toml
swarm-only/src/: lib.rs
swarm-only/src/client/: main.rs
swarm-only/src/edge/: main.rs
(+9 files in other folders)
