[workspace]
members = ["blockchain", "core", "node"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
base64 = "0.22.1"
blake3 = { version = "1.8.2", features = ["serde"] }
dotenvy = "0.15.7"
ecdsa = "0.16.9"
env_filter = "0.1.4"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["tokio", "dns", "kad", "mdns", "macros", "quic", "tcp", "noise", "yamux"] }
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa", "ecdsa-core", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tendermint = "0.40.4"
tendermint-abci = { version = "0.40.4", features = ["tracing-subscriber"] }
time = { version = "0.3.44", features = ["serde", "formatting"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
vodozemac = "0.9.0"
