[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
symbols = "strip"

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[workspace.dependencies]
bincode = { version = "2", features = ["serde"] }
client = { path = "crates/client", version = "0.0.0" }
defs =   { path = "crates/defs",   version = "0.0.0" }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2", features = ["digest", "serde"] }
miner =  { path = "crates/miner",  version = "0.0.0" }
relay =  { path = "crates/relay",  version = "0.0.0" }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.48.0", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["serde"] }