[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2", features = ["digest", "serde"] }
end2 = { path = "crates/end2" }
miner =  { path = "crates/miner",  version = "0.0.0" }
relay =  { path = "crates/relay",  version = "0.0.0" }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["js", "serde", "v7"] }
vodozemac = { version = "0.9.0", features = ["js"] }
x25519-dalek = { version = "2.0", features = ["serde"] }