[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[profile.release]
symbols = "strip"

[dependencies]
core = { path = "../core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tendermint-abci = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = "0.40.4"
prost = "0.14.1"
sha2 = { workspace = true }
