[package]
name = "core"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
ecdsa = { workspace = true }
tokio = { workspace = true, features = ["full"] }
p256 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
anyhow = { workspace = true }
prost = "0.14.1"

[build-dependencies]
prost-build = { version = "0.14" }
