[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
vodozemac = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
base64.workspace = true
