[package]
name = "swarm-only"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "edge"
path = "src/edge/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
libp2p = { version = "0.56", features = ["tokio", "gossipsub", "dns", "identify", "kad", "macros", "noise", "ping", "pnet", "quic", "websocket", "yamux"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15"
time = { version = "0.3.44", features = ["serde", "formatting"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
