[package]
name = "client"
version = "0.0.0"
edition.workspace = true

[lib]
doctest = false

[dependencies]
base64 = "0.22.1"
bincode.workspace = true
defs.workspace = true
dotenvy.workspace = true
ed25519-dalek.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
sha2 = "0.10.9"
x25519-dalek.workspace = true
