[package]
name = "end2-api-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v7"] }
vodozemac.workspace = true
