[package]
name = "end2-cometbft"
version = "0.1.0"
edition.workspace = true

[dependencies]
tendermint-abci = "0.40.4"
tendermint-proto = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.2" }
hex = "0.4.3"
dotenvy = "0.15.7"
base64 = "0.22.1"
sha2 = "0.10.9"
rocksdb = { version = "0.24.0", features = ["serde"] }
jmt = "0.12.0"
anyhow = "1.0.102"
borsh = "1.6.1"
