[package]
name = "end2-wasm-client"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
base64.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true
time.workspace = true
uuid.workspace = true
vodozemac.workspace = true
wasm-bindgen = "0.2.106"
