[package]
name = "end2-wasm-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.148"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.19.0", features = ["js", "serde", "v7"] }
vodozemac = { version = "0.9.0", features = ["js"] }
wasm-bindgen = "0.2.106"
