[package]
name = "end2"
version = "0.1.0"
edition.workspace = true

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
argon2 = "0.5.3"
askama = "0.15.1"
axum = { version = "0.8.8", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
dotenvy.workspace = true
futures = "0.3.31"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde.workspace = true
serde_json = "1.0.148"
tokio.workspace = true
tower-http = { version = "0.6.8", features = ["trace", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
