[package]
name = "end2"
version = "0.1.0"
edition.workspace = true

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
argon2 = "0.5.3"
askama = "0.15.1"
axum = { version = "0.8.8", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64.workspace = true
diesel = { version = "2.3.5", features = ["postgres", "r2d2", "time", "uuid"] }
dotenvy.workspace = true
ed25519-dalek.workspace = true
futures = "0.3.31"
openssl-sys = { version = "0.9.111", features = ["vendored"] }
pq-sys = { version = "0.7.5", features = ["bundled"] }
r2d2 = "0.8.10"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3.44", features = ["serde"] }
tokio.workspace = true
tower-http = { version = "0.6.8", features = ["cors", "trace", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid.workspace = true
vodozemac.workspace = true
