[package]
name = "end2"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "tracing", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64 = "0.22.1"
diesel = { version = "2.3.5", features = ["postgres", "r2d2", "serde_json", "time", "uuid"] }
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2", features = ["digest", "serde"] }
futures = "0.3.31"
mimalloc = { version = "0.1.48", features = ["secure"] }
oauth2 = "5.0.0"
pq-sys = { version = "0.7.5", features = ["bundled"] }
r2d2 = "0.8.10"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
vodozemac = { version = "0.9.0" }

[dev-dependencies]
anyhow = "1.0.100"

[target.'cfg(windows)'.dependencies]
openssl-sys = { version = "0.9.111", features = ["vendored"] }