[package]
name = "miner"
version = "0.0.0"
edition.workspace = true

[lib]
doctest = false

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
axum = "0.8"
bincode.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
