[package]
name = "miner"
version = "0.0.0"
edition = "2024"

[lib]
doctest = false

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
axum = "0.8"
bincode = { version = "2", features = ["serde"] }
ed25519-dalek = { version = "2.2", features = ["digest", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
